--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,14 @@
+<app-header></app-header>
+
+<main>
+    <app-hero></app-hero>
+    <app-about-me></app-about-me>
+    <app-skills></app-skills>
+    <app-projects></app-projects>
+    <app-references></app-references>
+    <app-contact></app-contact>
+</main>
+
+<app-footer></app-footer>
+
 <router-outlet />
