feat: added hero section with header

--- a/src/app/main/hero/hero.html
+++ b/src/app/main/hero/hero.html
@@ -1,1 +1,13 @@
-<p>hero works!</p>
+<section class="hero" id="top">
+    <div class="hero__inner">
+        <app-left-lateral class="hero__left-lateral"></app-left-lateral>
+
+        <div class="hero__content">
+            <app-title></app-title>
+        </div>
+
+        <app-right-lateral class="hero__right-lateral"></app-right-lateral>
+
+        <app-marquee class="hero__marquee"></app-marquee>
+    </div>
+</section>
