--- a/src/app/main/hero/left-lateral/left-lateral.html
+++ b/src/app/main/hero/left-lateral/left-lateral.html
@@ -1,1 +1,6 @@
-<p>left-lateral works!</p>
+<div class="left-lateral" aria-hidden="true">
+    <div class="left-lateral__scroll">
+        <span class="left-lateral__scroll-line"></span>
+    </div>
+    <span class="left-lateral__divider"></span>
+</div>
