--- a/src/app/shared/header/header.html
+++ b/src/app/shared/header/header.html
@@ -1,1 +1,9 @@
-<p>header works!</p>
+<header class="header">
+    <div class="header__inner">
+        <div class="header__menu-group">
+            <app-language-switch></app-language-switch>
+            <app-menu></app-menu>
+        </div>
+        <app-logo></app-logo>
+    </div>
+</header>
