--- a/src/app/shared/header/language-switch/language-switch.html
+++ b/src/app/shared/header/language-switch/language-switch.html
@@ -1,1 +1,8 @@
-<p>language-switch works!</p>
+<div class="language-switch" role="group" aria-label="Language">
+    <button type="button" class="language-switch__option language-switch__option--active" aria-pressed="true">
+        EN
+    </button>
+    <button type="button" class="language-switch__option" aria-pressed="false">
+        DE
+    </button>
+</div>
