--- a/src/app/shared/header/logo/logo.html
+++ b/src/app/shared/header/logo/logo.html
@@ -1,1 +1,7 @@
-<p>logo works!</p>
+<a class="logo" href="#top" aria-label="Daniel Luzius home">
+    <span class="logo__mark">DL</span>
+    <span class="logo__wordmark">
+        <span class="logo__wordmark-first">Daniel</span>
+        <span class="logo__wordmark-last">Luzius</span>
+    </span>
+</a>
