--- a/src/app/shared/header/menu/menu.html
+++ b/src/app/shared/header/menu/menu.html
@@ -1,1 +1,5 @@
-<p>menu works!</p>
+<nav class="menu" aria-label="Primary">
+    <a class="menu__link" href="#about">About me</a>
+    <a class="menu__link" href="#skills">Skills</a>
+    <a class="menu__link" href="#projects">Projects</a>
+</nav>
