--- a/src/app/main/hero/marquee/marquee.html
+++ b/src/app/main/hero/marquee/marquee.html
@@ -1,1 +1,10 @@
-<p>marquee works!</p>
+<section class="marquee" aria-label="Professional highlights">
+    <div class="marquee__mask">
+        <div class="marquee__track" role="presentation">
+            <ng-container *ngFor="let item of repeatedItems">
+                <span class="marquee__item">{{ item }}</span>
+                <span class="marquee__bullet" aria-hidden="true"></span>
+            </ng-container>
+        </div>
+    </div>
+</section>
