--- a/src/app/shared/header/language-switch/language-switch.html
+++ b/src/app/shared/header/language-switch/language-switch.html
@@ -1,8 +1,15 @@
-<div class="language-switch" role="group" aria-label="Language">
-    <button type="button" class="language-switch__option language-switch__option--active" aria-pressed="true">
+<div class="language-switch" role="group" aria-label="Language" (mouseenter)="isHovering = true"
+    (mouseleave)="isHovering = false">
+    <button type="button" class="language-switch__option"
+        [class.language-switch__option--active]="activeLanguage === 'EN'"
+        [class.language-switch__option--highlighted]="isHovering && activeLanguage !== 'EN'"
+        [attr.aria-pressed]="activeLanguage === 'EN'" (click)="setLanguage('EN')">
         EN
     </button>
-    <button type="button" class="language-switch__option" aria-pressed="false">
+    <button type="button" class="language-switch__option"
+        [class.language-switch__option--active]="activeLanguage === 'DE'"
+        [class.language-switch__option--highlighted]="isHovering && activeLanguage !== 'DE'"
+        [attr.aria-pressed]="activeLanguage === 'DE'" (click)="setLanguage('DE')">
         DE
     </button>
 </div>
