--- a/src/app/shared/header/menu/menu.html
+++ b/src/app/shared/header/menu/menu.html
@@ -1,5 +1,7 @@
 <nav class="menu" aria-label="Primary">
-    <a class="menu__link" href="#about">About me</a>
-    <a class="menu__link" href="#skills">Skills</a>
-    <a class="menu__link" href="#projects">Projects</a>
+    <a *ngFor="let item of menuItems" class="menu__link" [class.menu__link--active]="activeItem === item.id"
+        [attr.href]="item.href" (click)="setActive(item.id)"
+        [attr.aria-current]="activeItem === item.id ? 'true' : null">
+        {{ item.label }}
+    </a>
 </nav>
