feat: added new logo in header section

--- a/src/app/shared/header/logo/logo.html
+++ b/src/app/shared/header/logo/logo.html
@@ -1,5 +1,7 @@
 <a class="logo" href="#top" aria-label="Daniel Luzius home">
-    <span class="logo__mark">DL</span>
+    <span class="logo__mark" aria-hidden="true">
+        <img src="assets/img/daniel_luzius_logo.png" alt="" />
+    </span>
     <span class="logo__wordmark">
         <span class="logo__wordmark-first">Daniel</span>
         <span class="logo__wordmark-last">Luzius</span>
