style: changed building struckture of lateral

--- a/src/app/main/hero/left-lateral/left-lateral.html
+++ b/src/app/main/hero/left-lateral/left-lateral.html
@@ -1,6 +1,8 @@
-<div class="left-lateral" aria-hidden="true">
-    <div class="left-lateral__scroll">
-        <span class="left-lateral__scroll-line"></span>
+<div class="lateral">
+    <div class="scroll-down">
+        <div class="circle">
+            <span class="arrow">↓</span>
+        </div>
     </div>
-    <span class="left-lateral__divider"></span>
+    <div class="line"></div>
 </div>
