--- a/src/app/main/hero/hero.html
+++ b/src/app/main/hero/hero.html
@@ -1,13 +1,13 @@
 <section class="hero" id="top">
-    <div class="hero__inner">
-        <app-left-lateral class="hero__left-lateral"></app-left-lateral>
+    <!-- Laterals jetzt direkte Kinder von .hero, damit bottom:0 an tatsächlicher Hero-Unterkante klebt -->
+    <app-left-lateral class="hero__left-lateral"></app-left-lateral>
 
+    <div class="hero__inner">
         <div class="hero__content">
             <app-title></app-title>
         </div>
-
-        <app-right-lateral class="hero__right-lateral"></app-right-lateral>
-
         <app-marquee class="hero__marquee"></app-marquee>
     </div>
+
+    <app-right-lateral class="hero__right-lateral"></app-right-lateral>
 </section>
