--- a/src/app/main/hero/right-lateral/right-lateral.html
+++ b/src/app/main/hero/right-lateral/right-lateral.html
@@ -3,10 +3,14 @@
 
     <div class="icons">
         <a class="icon" aria-label="GitHub">
-            <img src="assets/icon/github_icon.png" alt="GitHub Icon">
+            <img class="icon__image icon__image--default" src="assets/icon/github_icon.png" alt="GitHub Icon">
+            <img class="icon__image icon__image--hover" src="assets/icon/github_hover.png" alt="" aria-hidden="true">
+            <img class="icon__circle" src="assets/icon/radio_hover.png" alt="" aria-hidden="true">
         </a>
         <a class="icon" aria-label="LinkedIn">
-            <img src="assets/icon/linkedin_icon.png" alt="LinkedIn Icon">
+            <img class="icon__image icon__image--default" src="assets/icon/linkedin_icon.png" alt="LinkedIn Icon">
+            <img class="icon__image icon__image--hover" src="assets/icon/linkedin_hover.png" alt="" aria-hidden="true">
+            <img class="icon__circle" src="assets/icon/radio_hover.png" alt="" aria-hidden="true">
         </a>
     </div>
 
