--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;500;600;700&family=Karla:wght@400;500;600;700&display=swap');
+
+:root {
+  --font-body: 'Karla', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+  --font-display: 'Fira Code', 'Courier New', Courier, monospace;
+  --color-bg: #1c1c1c;
+  --color-text: #f4f9f8;
+}
+
 /* You can add global styles to this file, and also import other style files */
 * {
   margin: 0;
@@ -6,5 +15,8 @@
 }
 
 body {
-  background-color: #1c1c1c;
+  background-color: var(--color-bg);
+  color: var(--color-text);
+  font-family: var(--font-body);
+  line-height: 1.5;
 }
