style: added background style with hover under img

--- a/src/app/main/about-me/about-me.html
+++ b/src/app/main/about-me/about-me.html
@@ -1,7 +1,10 @@
 <section class="about-me" id="about">
     <div class="about-me__container">
         <figure class="about-me__photo" aria-labelledby="about-me-heading">
-            <img src="assets/img/daniel_img.jpg" alt="Portrait of Daniel Luzius working on a laptop" loading="lazy" />
+            <div class="about-me__photo-frame">
+                <img src="assets/img/daniel_transparent_img.png" alt="Portrait of Daniel Luzius working on a laptop"
+                    loading="lazy" />
+            </div>
         </figure>
 
         <article class="about-me__panel" aria-labelledby="about-me-heading">
