--- a/src/app/main/projects/projects.html
+++ b/src/app/main/projects/projects.html
@@ -17,7 +17,7 @@
                     [attr.aria-expanded]="activeDialogIndex === i" [class.is-active]="selectedProjectIndex === i">
                     <h3 class="projects__item-title">
                         <span class="projects__item-label">{{ project.title }}</span>
-                        <img class="projects__item-icon" src="assets/icon/project icon/arrow_outward.png" alt=""
+                        <img class="projects__item-icon" src="assets/icon/project-icon/arrow_outward.png" alt=""
                             aria-hidden="true" />
                     </h3>
 
@@ -48,9 +48,9 @@
                 <button class="projects__dialog-close" type="button" (click)="closeProjectDialog()"
                     aria-label="Close project dialog">
                     <img class="projects__dialog-close-icon projects__dialog-close-icon--default"
-                        src="assets/icon/project icon/close_button.png" alt="" aria-hidden="true" />
+                        src="assets/icon/project-icon/close_button.png" alt="" aria-hidden="true" />
                     <img class="projects__dialog-close-icon projects__dialog-close-icon--hover"
-                        src="assets/icon/project icon/close_button_hover.png" alt="" aria-hidden="true" />
+                        src="assets/icon/project-icon/close_button_hover.png" alt="" aria-hidden="true" />
                 </button>
 
                 <div class="projects__dialog-info">
@@ -79,12 +79,12 @@
                         <a *ngIf="modalProject.githubUrl" class="projects__dialog-button"
                             [href]="modalProject.githubUrl" target="_blank" rel="noopener noreferrer">
                             <span>GitHub</span>
-                            <img src="assets/icon/project icon/arrow_outward.png" alt="" aria-hidden="true" />
+                            <img src="assets/icon/project-icon/arrow_outward.png" alt="" aria-hidden="true" />
                         </a>
                         <a *ngIf="modalProject.liveUrl" class="projects__dialog-button" [href]="modalProject.liveUrl"
                             target="_blank" rel="noopener noreferrer">
                             <span>Live Test</span>
-                            <img src="assets/icon/project icon/arrow_outward.png" alt="" aria-hidden="true" />
+                            <img src="assets/icon/project-icon/arrow_outward.png" alt="" aria-hidden="true" />
                         </a>
                     </div>
                 </div>
@@ -97,7 +97,7 @@
                     (mouseenter)="setNextHover(true)" (mouseleave)="setNextHover(false)" (focus)="setNextHover(true)"
                     (blur)="setNextHover(false)">
                     <span>Next project</span>
-                    <img [src]="isNextHovered ? 'assets/icon/project icon/arrow_right_hover.png' : 'assets/icon/project icon/arrow_right.png'"
+                    <img [src]="isNextHovered ? 'assets/icon/project-icon/arrow_right_hover.png' : 'assets/icon/project-icon/arrow_right.png'"
                         alt="" aria-hidden="true" />
                 </button>
             </article>
