feat: added footer and designed new logo with hover animation for both header and footer

--- a/src/app/main/skills/skills.html
+++ b/src/app/main/skills/skills.html
@@ -1,4 +1,4 @@
-<section class="skills" aria-labelledby="skills-section-heading">
+<section class="skills" id="skills" aria-labelledby="skills-section-heading">
     <div class="skills__inner">
         <div class="skills__panel skills__panel--info">
             <div class="skills__section-heading" id="skills-section-heading">Technologies</div>
