--- a/src/app/shared/footer/footer.html
+++ b/src/app/shared/footer/footer.html
@@ -1,1 +1,34 @@
-<p>footer works!</p>
+<footer class="footer">
+    <div class="footer-content">
+        <div class="footer-left">
+            <app-logo></app-logo>
+            <div class="info">
+                <p>Web Developer</p>
+                <p>Seligenstadt, Germany</p>
+            </div>
+        </div>
+
+        <div class="footer-center">
+            <p class="copyright">© Daniel Luzius 2025</p>
+        </div>
+
+        <nav class="footer-nav">
+            <a href="#hero" class="nav-link">
+                <span class="radio-button"></span>
+                <span class="link-text">Github</span>
+            </a>
+            <a href="#about-me" class="nav-link">
+                <span class="radio-button"></span>
+                <span class="link-text">LinkedIn</span>
+            </a>
+            <a href="#skills" class="nav-link">
+                <span class="radio-button"></span>
+                <span class="link-text">Email</span>
+            </a>
+            <a href="#projects" class="nav-link">
+                <span class="radio-button"></span>
+                <span class="link-text">Legal Notice</span>
+            </a>
+        </nav>
+    </div>
+</footer>
