--- a/src/app/main/contact/contact.html
+++ b/src/app/main/contact/contact.html
@@ -1,4 +1,4 @@
-<section class="contact-section">
+<section class="contact-section" id="contact">
     <div class="contact-container">
         <div class="contact-left">
             <app-contact-info />
