feat: added new main-page component and changed routing, added legal notice component for later

--- a/src/app/shared/footer/footer.html
+++ b/src/app/shared/footer/footer.html
@@ -25,7 +25,7 @@
                 <span class="radio-button"></span>
                 <span class="link-text">Email</span>
             </a>
-            <a href="#projects" class="nav-link">
+            <a routerLink="/legal-notice" class="nav-link">
                 <span class="radio-button"></span>
                 <span class="link-text">Legal Notice</span>
             </a>
