refactor/styling: seperatet footer from routes and added it to mainpage and legal notice. also added styline to legal notice

--- a/src/app/shared/footer/footer.scss
+++ b/src/app/shared/footer/footer.scss
@@ -2,6 +2,7 @@
   position: relative;
   width: 100%;
   padding: 64px 96px;
+  background: transparent;
   isolation: isolate;
 
   &::before {
@@ -11,6 +12,7 @@
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.75) 0%, rgba(0, 0, 0, 0) 100%);
     opacity: 0.95;
     z-index: -1;
+    pointer-events: none;
   }
 
   .footer-content {
