--- a/src/app/shared/legal-notice/legal-notice.html
+++ b/src/app/shared/legal-notice/legal-notice.html
@@ -1,1 +1,6 @@
-<p>legal-notice works!</p>
+<section class="legal-notice-section">
+    <div class="legal-notice-content">
+        <p>legal-notice works!</p>
+    </div>
+    <app-footer></app-footer>
+</section>
